Navbar也可以觸發煙火

--- a/Jou.html
+++ b/Jou.html
@@ -59,9 +59,9 @@
     <div class="container-fluid">
         <div class="row justify-content-between">
             <!-- 搜尋區 -->
-            <div id="replace" class="pr-0"></div>
-            <div class="wrapper col-3 pr-0" id="search">
-                <form class="form-signin mx-auto">
+            <div id="replace" class="pr-0 "></div>
+            <div class="wrapper col-3 pr-0 mx-auto" id="search">
+                <form class="form-signin">
                     <h2 class="form-signin-heading">搜尋</h2>
                     <input type="text" class="form-control" name="username" placeholder="請輸入地區" />
                     <input type="text" class="form-control" name="username" placeholder="請輸入時間" />
